@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-wasm-v0.1.0\...HEAD[Unreleased]
+
+=== Added
+
+* Add examples ({pull-request-url}/248[#248])
+
 == {project-url}/releases/tag/abcrypt-wasm-v0.1.0[0.1.0] - 2024-01-24
 
 === Added
